--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,71 +1,70 @@
-<div class="container margin-top10">
-  <div class='row margin-top20'>
-    <div class="col-sm-6 col-sm-offset-3">
-      <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-        <%= render 'layouts/error_messages', model: f.object %>
+<%# アカウント設定 %>
+<div class='row margin-top20'>
+  <div class="col-sm-6 col-sm-offset-3">
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+      <%= render 'layouts/error_messages', model: f.object %>
 
-        <div class="panel-heading text-center background white">
-          <i class="fas fa-user-edit"></i> プロフィール編集
+      <div class="panel-heading text-center background white">
+        <i class="fas fa-user-edit"></i> プロフィール編集
+      </div>
+
+      <div class="panel-body">
+        <div class="form-group">
+          <%= f.label :name, 'ユーザー名' %>
+          <%= f.text_field :name, class: 'form-control'%>
         </div>
 
-        <div class="panel-body">
-          <div class="form-group">
-            <%= f.label :name, 'ユーザー名' %>
-            <%= f.text_field :name, class: 'form-control'%>
-          </div>
-
-          <div class="form-group">
-            <%= f.label :yourself, '自己紹介（最大150文字）' %>
-            <%= f.text_area :yourself, class: 'form-control', rows: 6, placeholder: '改行は反映されません' %>
-          </div>
-
-          <div class="form-group">
-            <%= f.label :skill, '言語・スキル' %>
-            <%= f.text_field :skill, class: 'form-control', placeholder: 'html / css / JavaScript / Illustrator'%>
-          </div>
+        <div class="form-group">
+          <%= f.label :yourself, '自己紹介（最大150文字）' %>
+          <%= f.text_area :yourself, class: 'form-control', rows: 6, placeholder: '改行は反映されません' %>
         </div>
 
-        <div class="panel-heading text-center background white">
-          アカウント設定
+        <div class="form-group">
+          <%= f.label :skill, '言語・スキル' %>
+          <%= f.text_field :skill, class: 'form-control', placeholder: 'html / css / JavaScript / Illustrator'%>
+        </div>
+      </div>
+
+      <div class="panel-heading text-center background white">
+        アカウント設定
+      </div>
+
+      <div class="panel-body">
+        <div class="field form-group">
+          <%= f.label :email %><br />
+          <%= f.email_field :email, autocomplete: "email", class: 'form-control' %>
         </div>
 
-        <div class="panel-body">
-          <div class="field form-group">
-            <%= f.label :email %><br />
-            <%= f.email_field :email, autocomplete: "email", class: 'form-control' %>
-          </div>
+        <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+          <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+        <% end %>
 
-          <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-            <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-          <% end %>
-
-          <div class="field form-group">
-            <%= f.label :password, "パスワード（6文字以上）" %> 
-            <%= f.password_field :password, autocomplete: "new-password", class: 'form-control', placeholder: '変更しない場合は空白' %>
-          </div>
-
-          <div class="field form-group">
-            <%= f.label :password_confirmation %><br />
-            <%= f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control' %>
-          </div>
+        <div class="field form-group">
+          <%= f.label :password, "パスワード（6文字以上）" %> 
+          <%= f.password_field :password, autocomplete: "new-password", class: 'form-control', placeholder: '変更しない場合は空白' %>
         </div>
-        
-        <div class="text-center">
-          <%= f.submit '保存する', class: 'btn btn-info'%>
-        </div>
-      <% end %>
 
-      <div class="partition margin-top30 margin-bottom10"></div>
+        <div class="field form-group">
+          <%= f.label :password_confirmation %><br />
+          <%= f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control' %>
+        </div>
+      </div>
       
       <div class="text-center">
-        <%= form_for(resource, as: resource_name, url:registration_path(resource_name),
-                      html: { method: :delete },
-                      data: {confirm: 'アカウントに関連する情報が全て削除されます。本当に削除しますか?'},
-                      class: 'btn btn-danger') do |f| %>
-          <%= hidden_field_tag :user_id, current_user.id %>
-          <%= f.submit 'アカウントを削除する', class: 'btn btn-danger margin-top10' %>
-        <% end %>
+        <%= f.submit '保存する', class: 'btn btn-info'%>
       </div>
+    <% end %>
+
+    <div class="partition margin-top30 margin-bottom10"></div>
+    
+    <div class="text-center">
+      <%= form_for(resource, as: resource_name, url:registration_path(resource_name),
+                    html: { method: :delete },
+                    data: {confirm: 'アカウントに関連する情報が全て削除されます。本当に削除しますか?'},
+                    class: 'btn btn-danger') do |f| %>
+        <%= hidden_field_tag :user_id, current_user.id %>
+        <%= f.submit 'アカウントを削除する', class: 'btn btn-danger margin-top10' %>
+      <% end %>
     </div>
   </div>
 </div>
