--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,48 +1,46 @@
-<div class="container">
-  <div class='row'>
-    <div class="col-sm-6 col-sm-offset-3">
+<%# アカウント登録 %>
+<div class='row'>
+  <div class="col-sm-6 col-sm-offset-3">
 
-      <div class="margin-top30">
-        <div class="panel-heading text-center background">
-          <h4 class="white">アカウント登録</h4>
-        </div>
-        <div class="panel-body">
-          <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-            <%= render 'layouts/error_messages', model: f.object %>
-            
+    <div class="margin-top30">
+      <div class="panel-heading text-center background">
+        <h4 class="white">アカウント登録</h4>
+      </div>
+      <div class="panel-body">
+        <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+          <%= render 'layouts/error_messages', model: f.object %>
+          
 
-            <div class="field form-group">
-              <%= f.label :email %>
-              <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control' %>
-            </div>
+          <div class="field form-group">
+            <%= f.label :email %>
+            <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control' %>
+          </div>
 
-            <div class="field form-group">
-              <%= f.label :name %>
-              <%= f.text_field :name, class: 'form-control' %>
-            </div>
+          <div class="field form-group">
+            <%= f.label :name %>
+            <%= f.text_field :name, class: 'form-control' %>
+          </div>
 
-            <div class="field form-group">
-              <%= f.label :password %>
-              <% if @minimum_password_length %>
-                <em>( <%= @minimum_password_length %>文字以上 )</em>
-              <% end %>
-              <%= f.password_field :password, autocomplete: "new-password", class: 'form-control' %>
-            </div>
+          <div class="field form-group">
+            <%= f.label :password %>
+            <% if @minimum_password_length %>
+              <em>( <%= @minimum_password_length %>文字以上 )</em>
+            <% end %>
+            <%= f.password_field :password, autocomplete: "new-password", class: 'form-control' %>
+          </div>
 
-            <div class="field form-group">
-              <%= f.label :password_confirmation, 'パスワード確認' %>
-              <%= f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control' %>
-            </div>
+          <div class="field form-group">
+            <%= f.label :password_confirmation, 'パスワード確認' %>
+            <%= f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control' %>
+          </div>
 
-            <div class="actions text-center">
-              <%= f.submit "登録する", class: 'btn nomalbtn' %>
-            </div>
-          <% end %>
+          <div class="actions text-center">
+            <%= f.submit "登録する", class: 'btn nomalbtn' %>
+          </div>
+        <% end %>
 
-          <%= render "devise/shared/links" %>
-        </div>
+        <%= render "devise/shared/links" %>
       </div>
     </div>
   </div>
 </div>
-  
