--- a/app/views/goods/index.html.erb
+++ b/app/views/goods/index.html.erb
@@ -1,18 +1,15 @@
-<%= render 'layouts/welcome'%>
-
-<div class="container margin-top10">
-  <div class="row">
-    <div class="col-sm-9 col-sm-push-3">
-      <div class="home-content good-b-bottom margin-bottom10"><i class="fas fa-crown icon good-bg"></i> いいねランキング</div>
-        <% if @results == [] %>
-          <div class="text-muted eachcontent">
-            作品はありません
-          </div>
-        <% end %>
-        <%= render 'results/results', results: @results %>
-      </div>
-
-      <%= render 'layouts/home_nav'%>
+<%# いいねランキング %>
+<div class="row">
+  <div class="col-sm-9 col-sm-push-3">
+    <div class="home-content good-b-bottom margin-bottom10"><i class="fas fa-crown icon good-bg"></i> いいねランキング</div>
+      <% if @results == [] %>
+        <div class="text-muted eachcontent">
+          作品はありません
+        </div>
+      <% end %>
+      <%= render 'results/results', results: @results %>
     </div>
+
+    <%= render 'layouts/home_nav'%>
   </div>
 </div>
