--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -340,3 +340,13 @@ footer {
   background: #d7e8e9;
   border-radius: 15px;
 }
+
+.tweetbtn {
+  background: #1b95e0;
+  color: #fff;
+}
+
+.tweetbtn:hover {
+  background: #1688cf;
+  color: #fff;
+}
