add twitter card

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <% if @result %>
+      <meta name="twitter:card" content=”summary_large_img“>
+      <meta name="twitter:title" content="<%= @result.subtitle %>〜<%= @result.title %>〜 - Sharemade">
+      <meta name="twitter:description" content="<%= @result.detail %>">
+      <meta name="twitter:image" content="<%= @result.image %>">
+    <% end %>
+
     <title>Sharemade</title>
     <%= csrf_meta_tags %>
 
