for twitter card

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <% if @result %>
-      <meta name="twitter:card" content=”summary_large_img“>
+      <meta name="twitter:card" content="summary_large_img">
       <meta name="twitter:title" content="<%= @result.subtitle %>〜<%= @result.title %>〜 - Sharemade">
       <meta name="twitter:description" content="<%= @result.detail %>">
       <meta name="twitter:image" content="<%= @result.image %>">
