--- a/app/views/results/show.html.erb
+++ b/app/views/results/show.html.erb
@@ -57,7 +57,7 @@
 
         <div class="text-center">
           <p><b>Twitterでこの作品を共有しよう！</b></p>
-          <a class="btn tweetbtn" target="_blank" href="https://twitter.com/intent/tweet?text=<%= @result.subtitle %>〜<%= @result.title %>〜%0a&url=<%= request.url %>&hashtags=Sharemade"><i class="fab fa-twitter"></i> Tweetへ移動</a>
+          <a class="btn tweetbtn" target="_blank" href="https://twitter.com/intent/tweet?text=<%= @result.subtitle %>〜<%= @result.title %>〜%0a&url=<%= request.url %>&hashtags=Sharemade"><i class="fab fa-twitter"></i> Twitterで共有</a>
         </div>
         
         <% if user_signed_in? == false %>
