twitter card 作品詳細ページ以外の設定　変更

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
     <% else %>
       <meta name="twitter:card" content="summary_large_image">
       <meta name="twitter:title" content="Sharemade~オリジナルアプリやwebサイトの共有スペース~">
-      <meta name="twitter:description" content="みんなが作ったオリジナルアプリ、webサイトが見られます。自分で作ったサイトやアプリを登録して、色々な人に作品を使ってもらいましょう！">
+      <meta name="twitter:description" content="みんなが作ったオリジナルアプリ、webサイトが見られます！自分の作品を登録すると、色々な人に使ってもらえます。">
       <meta name="twitter:image" content="https://sharemade-image.s3-ap-northeast-1.amazonaws.com/images/twitter_card_img.png">
     <% end %>
 
