--- a/app/views/goods/_good_btn.html.erb
+++ b/app/views/goods/_good_btn.html.erb
@@ -11,6 +11,26 @@
   <% end %>
 
 <% else %>
-  <span class='good btn margin-right10'><i class="far fa-thumbs-up"></i> <%= result.good_users.count %></span>
-  <div>アカウント登録をしてsharemadeをもっと便利に使いませんか？</div>
+  <%# モーダル呼びだし。results/showにモーダル記述 %>
+  <span class='good btn margin-right10 js-modal-open'><i class="far fa-thumbs-up"></i> <%= result.good_users.count %></span>
+  <%# モーダル %>
+  <%# モーダルで表示したいコンテンツ %>
+  <div class="good-modal-content js-modal margin-top10">
+    <p><b>いいねをするには<br>アカウント登録が必要です。</b><br>アカウント登録をしてsharemadeをもっと便利に使いませんか？</P>
+    <a class='btn welcomebtn' href="/users/sign_up">アカウント登録</a><br>
+    <div class="margin-bottom10">アカウントをお持ちの方は<br><%= link_to "ログイン", '/users/sign_in' %></div>
+    <a class="js-modal-close" href="">閉じる</a>
+  </div>
+  <script type="text/javascript">
+    $(function () {
+      $('.js-modal-open').on('click', function() {
+        $('.js-modal').fadeIn();
+      });
+      $('.js-modal-close').on('click', function() {
+        $('.js-modal').fadeOut();
+        // a要素はreturn falseを書かないとリンク要素として処理され、jQueryとして処理してくれなくなるので注意
+        return false;
+      });
+    });
+  </script>
 <% end %>
