--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -23,6 +23,18 @@
           <%= f.label :skill, '言語・スキル' %>
           <%= f.text_field :skill, class: 'form-control', placeholder: 'html / css / JavaScript / Illustrator'%>
         </div>
+
+        <div class="form-group">
+          <%= f.label :twitter_account, 'twitter' %>
+          <div class="input-group">
+            <span class="input-group-addon">@</span><%= f.text_field :twitter_account, class: 'form-control', placeholder: 'twitterのユーザー名' %>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <%= f.label :github_account, 'Githubアカウント' %>
+          <%= f.text_field :github_account, class: 'form-control', placeholder: 'https://github.com/github_username' %>
+        </div>
       </div>
 
       <div class="panel-heading text-center background white">
