profile設定 再追加

--- a/app/views/layouts/_home_nav.html.erb
+++ b/app/views/layouts/_home_nav.html.erb
@@ -12,7 +12,16 @@
           <i class="fas fa-user"></i> マイページ
         <% end %>
       </li>
-      <li role="presentation"><a href="/users/edit" ><i class="fas fa-cog"></i> ユーザー情報</a></li>
+      <% if current_user.profiles %>
+        <li>
+          <%= link_to edit_profile_path(current_user) do %>
+            <i class="fas fa-user-edit"></i>プロフィール
+          <% end %>
+        </li>
+      <% else %>
+        <li><a href="/profile/new"><i class="fas fa-user-edit"></i></i>プロフィール</a></li>
+      <% end %>
+      <li role="presentation"><a href="/users/edit" ><i class="fas fa-cog"></i> アカウント設定</a></li>
 
       <div class="partition margin-top10 margin-bottom10"></div>
 
