デザイン アイコンの追加 ナビバー修正

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -5,7 +5,7 @@
       <%= render 'layouts/error_messages', model: f.object %>
 
       <div class="panel-heading text-center background white">
-        アカウント設定
+        <i class="fas fa-cog"></i> アカウント設定
       </div>
 
       <div class="panel-body">
