--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -13,7 +13,7 @@
         <li><a href='/good_ranking'><i class="fas fa-crown"></i> いいねランキング</a></li>
         <li class="divider"></li>
         <li><a href='/users'><i class="fas fa-users"></i> ユーザー</a></li>
-        <li class="divider"></li>
+        <%# <li class="divider"></li> %>
         <%# <li><a href='/about_sharemade'>Sharemadeについて</a></li> %>
       </ul>
     </span>
