--- a/app/views/layouts/_home_nav.html.erb
+++ b/app/views/layouts/_home_nav.html.erb
@@ -15,11 +15,11 @@
       <% if current_user.profiles != [] %>
         <li>
           <%= link_to edit_profile_path(current_user) do %>
-            <i class="fas fa-user-edit"></i>プロフィール
+            <i class="fas fa-user-edit"></i> プロフィール
           <% end %>
         </li>
       <% else %>
-        <li><a href="/profiles/new"><i class="fas fa-user-edit"></i></i>プロフィール</a></li>
+        <li><a href="/profiles/new"><i class="fas fa-user-edit"></i> プロフィール</a></li>
       <% end %>
       <li role="presentation"><a href="/users/edit" ><i class="fas fa-cog"></i> アカウント設定</a></li>
 
