--- a/app/views/profiles/_profile_form.html.erb
+++ b/app/views/profiles/_profile_form.html.erb
@@ -10,7 +10,8 @@
       <div class="panel-body">
         <div class="form-group">
           <%= f.label :yourself, '自己紹介（最大150文字）' %>
-          <%= f.text_area :yourself, class: 'form-control', rows: 6, placeholder: '改行は反映されません' %>
+          <%= f.text_area :yourself, class: 'form-control  js-text', rows: 6, placeholder: '改行は反映されません' %>
+          <P class="js-text-count pull-right"></P>
         </div>
 
         <div class="form-group">
