作品登録フォーム　文字カウント追加

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -48,7 +48,7 @@
         </ul>
       </span>
 
-      <%= link_to new_result_path, class:'white' do %>
+      <%= link_to new_result_path, class:'white', data: {"turbolinks" => false} do %>
         <span class="btn pull-right result-new margin-top10">
           <i class="fas fa-edit"></i> 作品登録
         </span>
