--- a/app/views/results/_result_form.html.erb
+++ b/app/views/results/_result_form.html.erb
@@ -22,8 +22,9 @@
   </div>
 
   <div class="form-group">
-    <%= f.label :detail, '作品紹介'%>
-    <%= f.text_area :detail, placeholder: '作品の説明・使い方・こだわりなど', class: 'form-control', rows: 10 %>
+    <%= f.label :detail, '作品紹介'%> （<span class="js-max-text">65535</span>文字以内）
+    <%= f.text_area :detail, placeholder: '作品の説明・使い方・こだわりなど', class: 'form-control js-text', rows: 10 %>
+    <p class="js-text-count pull-right"></p>
   </div>
 
   <div class="form-group">
