--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -48,7 +48,7 @@
         </ul>
       </span>
 
-      <a href="/notifications"><span class="badge pull-right margin-top10 nav-count"><i class="far fa-bell"></i> 0</span></a>
+      <a href="/notifications"><span class="badge pull-right margin-top10 nav-count"><i class="far fa-bell"></i> <%= uncheck_notifications %></span></a>
 
       <%= link_to new_result_path, class:'white', data: {"turbolinks" => false} do %>
         <span class="btn pull-right result-new margin-top10 margin-right5">
