--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,15 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <% if @result %>
-      <meta name="twitter:card" content="summary_large_image">
+      <meta name="twitter:card" content="summary">
       <meta name="twitter:title" content="<%= @result.subtitle %>〜<%= @result.title %>〜 - Sharemade">
       <meta name="twitter:description" content="<%= @result.detail %>">
-      <meta name="twitter:image" content="<%= @result.image %>">
+      <meta name="twitter:image" content="https://uploda4.ysklog.net/06937f836c4645a5c7d45ad65648ae14.png" >
     <% else %>
       <meta name="twitter:card" content="summary_large_image">
       <meta name="twitter:title" content="Sharemade~オリジナルアプリやwebサイトの共有スペース~">
       <meta name="twitter:description" content="みんなが作ったオリジナルアプリ、webサイトが見られます！自分の作品を登録すると、色々な人に使ってもらえます。">
-      <meta name="twitter:image" content="https://sharemade-image.s3-ap-northeast-1.amazonaws.com/images/twitter_card_img.png">
+      <meta name="twitter:image" content="https://uploda4.ysklog.net/c894477bd936e3fc952b0f9c614a108c.png">
     <% end %>
 
     <title>Sharemade</title>
