--- a/app/views/results/show.html.erb
+++ b/app/views/results/show.html.erb
@@ -20,14 +20,10 @@
         </div>
 
         <div class="row">
-        <div class="text-center image-box margin-bottom10">
-          <% if @result.image.url != nil %>
-            <%= image_tag @result.image.url, class: 'img' %>
-          <% else %>
+          <div class="text-center image-box margin-bottom10 no_img_content_show">
             <img src="/images/no_img.png" alt="no_image" class="no_img">
-            NO IMAGE
-          <% end %>
-        </div>
+            Under Construction
+          </div>
         </div>
     
         <div class="margin-bottom20">
